# lzscp

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
examples/: config.toml
src/: app.rs  clipboard.rs  config.rs  history.rs  main.rs  path_input.rs  ssh_config.rs  target.rs  transfer.rs  tunnel.rs  update.rs  watch.rs
src/ui/: mod.rs  theme.rs
