[package]
name = "lzscp"
version = "0.2.0"
edition = "2024"
description = "Lazy SCP — a local TUI for drag-drop file sync to SSH hosts with auto clipboard path return"
readme = "README.md"
license = "MIT"
keywords = ["tui", "terminal", "scp", "rsync", "ssh"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/FanFusion/lzscp"
authors = ["FanFusion"]

[[bin]]
name = "lzscp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"

crossterm = { version = "0.29.0", features = ["event-stream", "bracketed-paste"] }
ratatui = "0.30.0"

arboard = "3.6.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5"
shellexpand = "3"
percent-encoding = "2"
shlex = "1"
ureq = { version = "2.12", features = ["json"] }
regex = "1"
anyhow = "1"
thiserror = "2"
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
